--- a/gulp-chsi-rev/package.json
+++ b/gulp-chsi-rev/package.json
@@ -1,19 +1,18 @@
 {
   "name": "gulp-chsi-rev",
-  "version": "1.0.1",
-  "description": "链接添加版本号，chsi特有的spath链接",
+  "version": "1.0.2",
+  "description": "gulp插件，链接添加版本号",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "repository": {
     "type": "git",
-    "url":  "git+https://github.com/huanghui8030/gulp.git"
+    "url":  "https://github.com/huanghui8030/gulp/tree/master/gulp-chsi-rev"
   },
   "keywords": [
     "gulpplugin",
-    "chsi",
-    "version"
+    "chsi version"
   ],
   "author": {
       "name":"huanghui",
