--- a/rev-demo/package.json
+++ b/rev-demo/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-cache": "^0.4.6",
     "gulp-chsi-rev": "^1.0.6",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.12",
@@ -24,6 +23,7 @@
     "gulp-rev-collector": "^1.1.1",
     "gulp-rev-replace": "^0.4.3",
     "gulp-uglify": "^2.0.0",
-    "gulp-watch": "^4.3.9"
+    "gulp-watch": "^4.3.9",
+    "imagemin-pngquant": "^5.0.0"
   }
 }
