--- a/gulp-rename-rev/package.json
+++ b/gulp-rename-rev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-rename-rev",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "gulp插件，文件根据特定的格式进行修改版本号，例如：a.js->a-1.1.1.js,b-1.2.3.js->b-1.3.3.js",
   "license": "ISC",
   "repository": {
@@ -20,13 +20,13 @@
     "email": "huanghui8030@qq.com",
     "url": "https://github.com/huanghui8030"
   },
-  "devDependencies": {
+  "dependencies": {
     "modify-filename": "^1.1.0",
-    "plugin-error": "^1.0.1",
+    "plugin-error": "^0.1.2",
     "rev-hash": "^2.0.0",
     "rev-path": "^2.0.0",
     "sort-keys": "^2.0.0",
-    "through2": "^2.0.3",
+    "through2": "^2.0.0",
     "vinyl": "^2.1.0",
     "vinyl-file": "^3.0.0"
   },
