--- a/gulp-chsi-rev/package.json
+++ b/gulp-chsi-rev/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-chsi-rev",
-  "version": "1.1.0",
-  "description": "gulp插件，链接添加版本号",
+  "version": "1.1.1",
+  "description": "基于gulp的插件，静态资源后面添加时间戳作为版本号，达到去缓存的作用。",
   "main": "index.js",
   "scripts": {
     "test": "make test"
