--- a/gulp-rename-rev/package.json
+++ b/gulp-rename-rev/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-rename-rev",
-  "version": "1.0.3",
-  "description": "gulp插件，文件根据特定的格式进行修改版本号，例如：a.js->a-1.1.1.js,b-1.2.3.js->b-1.3.3.js",
+  "version": "1.0.5",
+  "description": "gulp插件，文件根据特定的格式进行修改版本号，例如：a.js->a-1.1.1.js,b-1.2.3.min.js->b-1.3.3.min.js",
   "license": "ISC",
   "repository": {
     "type": "git",
